	* src/plugins/WriteFtree.py (FtreeWriter.export): make sure that the 
	parents are in the id_map array

2003-12-11  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/PdfDoc.py (draw_text): Remove extra ",".
	* src/docgen/HtmlDoc.py (write_note): Use styles for preformatted note. 
	* src/edit_person.glade: Add tooltips and hotkeys to the radiobuttons.

2003-12-10  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GrampsCfg.py: Make sure to return "BOTH" if the gnome
	toolbar gconf entry is not set. Appears that this can happen
	on systems that don't have gnome fully installed.

2003-12-10  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/edit_person.glade: Add notes format radiobuttons.
	* src/EditPerson.py: Support format for the person's notes.
	* src/RelLib.py: More support for the notes' format.
	* src/plugins/ReadGedcom.py: Add an "Unknown" address when
	parsing an incorrect PHON field. 

	* src/BaseDoc.py (write_note): Add function.
	* src/docgen/HtmlDoc.py (write_note): Implement function. 
	* src/plugins/FtmStyleDescendants.py (print_notes): Call write_note()
	with the note's format. 

2003-12-10  Tim Waugh  <twaugh@redhat.com>
	* doc/omf.make: Fixed DESTDIR support.

2003-12-09  Don Allingham  <dallingham@users.sourceforge.net>
	* src/FamilyView.py (FamilyView.new_child_after_edit): 
	call display_marriage instead of load_family. Prevents the 
	active person from being changed.
	* src/Plugins.py (PluginDialog.__init__): catch the attribute
	error that is thown if gtk does not support gtk_tooltips_data.get

2003-12-09  Alex Roitman  <shura@alex.neuro.umn.edu>
	* doc/gramps-manual/ru/getstart.xml: Translation update.
	* src/plugins/WriteGedcom.py (export_data): Correct researcher's 
	PHON field; (write_person): Correct exported PHON fields.
	* src/plugins/ReadGedcom.py (parse_residence): Remove PHON field since
	it is taken care of by parse_address() now; 
	(parse_address): Parse PHON field, provided it immediately follows
	ADDR structure. 