@@ -107,6 +107,7 @@ class Marriage:
             "on_add_attr_clicked" : self.on_add_attr_clicked,
             "on_delete_attr_clicked" : self.on_delete_attr_clicked,
             "on_addphoto_clicked" : self.gallery.on_add_photo_clicked,
+            "on_selectphoto_clicked" : self.gallery.on_select_photo_clicked,
             "on_close_marriage_editor" : self.on_close_marriage_editor,
             "on_delete_event" : self.on_delete_event,
             "on_lds_src_clicked" : self.lds_src_clicked,
