@@ -3827,13 +3827,31 @@ kjhkjhk</property>
 		      <child>
 			<widget class="GtkButton" id="button76">
 			  <property name="visible">True</property>
-			  <property name="tooltip" translatable="yes">Place new media object in this gallery</property>
+			  <property name="tooltip" translatable="yes">Add a new media object to the database and place it in this gallery</property>
 			  <property name="can_default">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">_Add...</property>
+			  <property name="label" translatable="yes">_Add from file...</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <signal name="clicked" handler="on_addphoto_clicked" object="editPerson"/>
+			</widget>
+			<packing>
+			  <property name="padding">0</property>
+			  <property name="expand">False</property>
+			  <property name="fill">False</property>
+			</packing>
+		      </child>
+
+		      <child>
+			<widget class="GtkButton" id="button135">
+			  <property name="visible">True</property>
+			  <property name="tooltip" translatable="yes">Select an existing media object from the database and place it in this gallery</property>
+			  <property name="can_default">True</property>
+			  <property name="can_focus">True</property>
+			  <property name="label" translatable="yes">Add from _database...</property>
+			  <property name="use_underline">True</property>
+			  <property name="relief">GTK_RELIEF_NORMAL</property>
+			  <signal name="clicked" handler="on_selectphoto_clicked" object="editPerson" last_modification_time="Fri, 12 Dec 2003 04:11:28 GMT"/>
 			</widget>
 			<packing>
 			  <property name="padding">0</property>
@@ -3875,10 +3893,6 @@ kjhkjhk</property>
 			  <property name="expand">False</property>
 			  <property name="fill">False</property>
 			</packing>
-		      </child>
-
-		      <child>
-			<placeholder/>
 		      </child>
 		    </widget>
 		    <packing>
