@@ -1478,10 +1478,10 @@
 		      <child>
 			<widget class="GtkButton" id="button100">
 			  <property name="visible">True</property>
-			  <property name="tooltip" translatable="yes">Place new media object in this gallery</property>
+			  <property name="tooltip" translatable="yes">Add a new media object to the database and place it in this gallery</property>
 			  <property name="can_default">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">_Add...</property>
+			  <property name="label" translatable="yes">_Add from file...</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <signal name="clicked" handler="on_addphoto_clicked" object="marriageEditor"/>
@@ -1494,8 +1494,27 @@
 		      </child>
 
 		      <child>
+			<widget class="GtkButton" id="button120">
+			  <property name="visible">True</property>
+			  <property name="tooltip" translatable="yes">Select an existing media object from the database and place it in this gallery</property>
+			  <property name="can_default">True</property>
+			  <property name="can_focus">True</property>
+			  <property name="label" translatable="yes">Add from _database...</property>
+			  <property name="use_underline">True</property>
+			  <property name="relief">GTK_RELIEF_NORMAL</property>
+			  <signal name="clicked" handler="on_selectphoto_clicked" object="marriageEditor" last_modification_time="Fri, 12 Dec 2003 04:57:01 GMT"/>
+			</widget>
+			<packing>
+			  <property name="padding">0</property>
+			  <property name="expand">False</property>
+			  <property name="fill">False</property>
+			</packing>
+		      </child>
+
+		      <child>
 			<widget class="GtkButton" id="button117">
 			  <property name="visible">True</property>
+			  <property name="tooltip" translatable="yes">Edit the properties of the selected objects</property>
 			  <property name="can_focus">True</property>
 			  <property name="label" translatable="yes">_Edit...</property>
 			  <property name="use_underline">True</property>
@@ -1515,7 +1534,7 @@
 			  <property name="tooltip" translatable="yes">Remove selected object from this gallery only</property>
 			  <property name="can_default">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">_Delete</property>
+			  <property name="label" translatable="yes">_Remove</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <signal name="clicked" handler="on_deletephoto_clicked" object="marriageEditor"/>
@@ -1525,10 +1544,6 @@
 			  <property name="expand">False</property>
 			  <property name="fill">False</property>
 			</packing>
-		      </child>
-
-		      <child>
-			<placeholder/>
 		      </child>
 		    </widget>
 		    <packing>
